# blackbox

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE-design.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LAP_TIMER_PLAN.md  LICENSE  README.md  RELEASE.md  clippy.toml  implementation_plan.md  mqtt_binary_decoder.py  mqtt_decoder.py  partitions.csv  release-notes.md  sdkconfig.defaults
.cargo/: config.toml
.github/: DOCUMENTATION.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
data/sample-tracks/: README.md
docs/: EKF_GPS_FUSION_ISSUES.md  FAQ.md  LAPTIMER_FEATURE_ISSUE.md  LAP_TIMER.md  PARTITION_SIZE_ISSUES.md  README.md  SECURITY.md  SENSOR_FUSION.md  SENSOR_TOOLKIT_GUIDE.md  index.html  nvs-generator.js  power-management-issue.md  projects-config.js
drivers/neo6m/: Cargo.toml  README.md
drivers/neo6m/src/: lib.rs  ubx.rs
drivers/ublox-gps/: Cargo.toml  README.md
drivers/ublox-gps/src/: lib.rs
drivers/ublox-neo/: Cargo.toml  README.md
drivers/ublox-neo/src/: lib.rs
drivers/wt901/: Cargo.toml  README.md
drivers/wt901/src/: lib.rs
examples/: README.md
framework/: Cargo.toml  README.md
framework/examples/: drive_sim.rs
framework/src/: ekf.rs  filter.rs  fusion.rs  lap_timer.rs  lib.rs  mode.rs  sensor_framework.rs  sensors.rs  transforms.rs  velocity.rs
hardware/: README.md  blackbox_schematic_doc.md
scripts/: README.md  generate_flasher_config.py  release.sh  setup-partition.sh
sensors/: README.md
sensors/active-wing/: Cargo.toml  README.md  build.rs  config.toml.example  project.json  sdkconfig.defaults
sensors/active-wing/.cargo/: config.toml
sensors/active-wing/docs/: FINAL_SUMMARY.md  REFACTORING_SUMMARY.md
sensors/active-wing/src/: binary_telemetry.rs  config.rs  fusion_coordinator.rs  gps.rs  imu.rs  main.rs  main_bkup.rs  mode.rs  mqtt.rs  rgb_led.rs  sensor_plugins.rs  system.rs  tcp_stream.rs  wifi.rs
sensors/active-wing/tools/python/: README.md  mqtt_telemetry_receiver.py  telemetry_common.py
sensors/blackbox/: Cargo.toml  README.md  build.rs  config.toml.example  project.json  sdkconfig.defaults
sensors/blackbox/.cargo/: config.toml
sensors/blackbox/docs/: CODE_REVIEW_REFACTORED.md  FINAL_SUMMARY.md  REFACTORING_SUMMARY.md
sensors/blackbox/src/: binary_telemetry.rs  calibration.rs  config.rs  diagnostics.rs  filter.rs  fusion.rs  gps.rs  imu.rs  main.rs  mode.rs  mqtt.rs  nvs_storage.rs  rgb_led.rs  sensor_plugins.rs  settings.rs  system.rs  udp_stream.rs  websocket_server.rs  wifi.rs
sensors/blackbox/tools/python/: mqtt_binary_decoder.py  mqtt_decoder.py  tcp_telemetry_receiver.py
src/: binary_telemetry.rs  ekf.rs  gps.rs  imu.rs  main.rs  main_full.rs  mode.rs  mqtt.rs  rgb_led.rs  transforms.rs  web_sockets.rs
tools/dashboard-dev/: README.md  REDESIGN-WORKFLOW.md  index-production.html  index.html
tools/python/: analyze_telemetry.py  analyze_track_data.py  configure_wt901.py  debug_track_recorder.py  mqtt_binary_decoder.py  mqtt_decoder.py  probe_wt901.py  requirements.txt  simulate_track_recorder.py  tcp_telemetry_server.py  udp_telemetry_server.py
tools/uart_bridge/: Cargo.toml  sdkconfig.defaults
tools/uart_bridge/.cargo/: config.toml
tools/uart_bridge/src/: main.rs
