[workspace]
members = [
    "framework",
    "drivers/wt901",
    "drivers/neo6m",
    "sensors/active-wing",
]
resolver = "2"

# Workspace-wide settings
[workspace.package]
version = "0.1.0"
authors = ["Jose Cruz Toledo <you@example.com>"]
edition = "2021"

# Shared dependencies for workspace members
[workspace.dependencies]
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
esp-idf-hal = "0.45"
esp-idf-svc = { version = "0.51", default-features = false }
esp-idf-sys = { version = "0.36", default-features = false }
