[workspace]
members = [
    "framework",           # motorsport-telemetry crate
    "drivers/wt901",       # WT901 IMU driver
    "drivers/neo6m",       # NEO-6M GPS driver
    "sensors/blackbox", # Active Wing ESP32 telemetry application
]
resolver = "2"

# Workspace-wide settings
[workspace.package]
version = "0.1.0"
authors = ["Jose Cruz Toledo <you@example.com>"]
edition = "2021"

# Shared dependencies for workspace members
[workspace.dependencies]
log = "0.4"
# Pin serde to avoid compatibility issues with latest versions
serde = { version = "=1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "=1.0.132", default-features = false, features = ["alloc"] }
esp-idf-hal = "0.45"
esp-idf-svc = { version = "0.51", default-features = false }
esp-idf-sys = { version = "0.36", default-features = false }

# Workspace-wide build profiles
[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
