[package]
name = "sensor-fusion"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Sensor fusion and state estimation library for embedded systems"
keywords = ["sensor-fusion", "kalman-filter", "ekf", "state-estimation", "embedded"]
categories = ["embedded", "no-std", "science"]
license = "MIT"
repository = "https://github.com/jctoledo/blackbox"

[lib]
name = "sensor_fusion"

[dependencies]
# Use workspace dependencies
log.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# ESP32-specific dependencies (optional for non-embedded use)
esp-idf-hal = { workspace = true, optional = true }
esp-idf-svc = { workspace = true, optional = true, features = ["binstart", "alloc", "std"] }
esp-idf-sys = { workspace = true, optional = true }

[features]
default = []
esp32 = ["esp-idf-hal", "esp-idf-svc", "esp-idf-sys"]
mqtt = ["serde", "serde_json"]
