[package]
name = "ublox-gps"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "u-blox GPS driver with NMEA and UBX protocol support (NEO-6M, NEO-M9N, etc.)"
license = "MIT OR Apache-2.0"
keywords = ["gps", "nmea", "ubx", "ublox", "neo-m9n", "parser", "embedded"]
categories = ["embedded", "hardware-support", "no-std", "parser-implementations"]

[lib]
name = "ublox_gps"

[dependencies]
# Floating point math for no-std
libm = "0.2"

# Optional logging for debugging
log = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
logging = ["log"]

[dev-dependencies]
# For testing
