[package]
name = "ublox-neo"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "u-blox NEO GPS NMEA parser and UBX configuration for embedded systems"
license = "MIT OR Apache-2.0"
keywords = ["gps", "nmea", "ublox", "neo-6m", "neo-7m", "neo-8m", "parser", "embedded"]
categories = ["embedded", "hardware-support", "no-std", "parser-implementations"]

[lib]
name = "ublox_neo"

[dependencies]
# Floating point math for no-std
libm = "0.2"

# Optional logging for debugging
log = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
logging = ["log"]

[dev-dependencies]
# For testing
