[package]
name = "wt901"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "WT901 9-axis IMU UART driver for embedded systems"
license = "MIT OR Apache-2.0"
keywords = ["imu", "sensor", "wt901", "uart", "embedded"]
categories = ["embedded", "hardware-support", "no-std"]

[lib]
name = "wt901"

[dependencies]
# No dependencies! This is a pure parser
# Optional logging for debugging
log = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
logging = ["log"]

[dev-dependencies]
# For testing
